--- a/server.cfg
+++ b/server.cfg
@@ -8,7 +8,7 @@ sv_maxclients 5
 #load_server_icon "logo.png"
 sets banner_detail ""
 sets banner_connecting ""
-sets Discord "https://discord.gg/xKPqKdB736"
+sets Discord "https://discord.gg/7SBn6ygS87"
 sets Développeur "Noxxo"
 sets locale "fr-FR" 
 sets Etat "Ouvert"
